NCalc/NCalcParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Grammar\\NCalc.g 2013-07-10 15:34:34


using System.Text;
using System.Globalization;
using System.Collections.Generic;
using NCalc.Domain;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public class NCalcParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"INTEGER", 
		"HEXINT", 
		"BININT", 
		"FLOAT", 
		"STRING", 
		"DATETIME", 
		"TRUE", 
		"FALSE", 
		"ID", 
		"NAME", 
		"IDPART", 
		"DIGIT", 
		"HexDigit", 
		"BINDIGIT", 
		"E", 
		"EscapeSequence", 
		"LETTER", 
		"UnicodeEscape", 
		"WS", 
		"'?'", 
		"':'", 
		"'||'", 
		"'or'", 
		"'&&'", 
		"'and'", 
		"'|'", 
		"'^'", 
		"'&'", 
		"'=='", 
		"'='", 
		"'!='", 
		"'<>'", 
		"'<'", 
		"'<='", 
		"'>'", 
		"'>='", 
		"'<<'", 
		"'>>'", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'%'", 
		"'!'", 
		"'not'", 
		"'~'", 
		"'('", 
		"')'", 
		"','"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int LETTER = 20;
    public const int T__23 = 23;
    public const int FLOAT = 7;
    public const int HEXINT = 5;
    public const int ID = 12;
    public const int EOF = -1;
    public const int HexDigit = 16;
    public const int BININT = 6;
    public const int NAME = 13;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int DIGIT = 15;
    public const int T__50 = 50;
    public const int T__42 = 42;
    public const int INTEGER = 4;
    public const int E = 18;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int DATETIME = 9;
    public const int TRUE = 10;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int WS = 22;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int UnicodeEscape = 21;
    public const int BINDIGIT = 17;
    public const int IDPART = 14;
    public const int FALSE = 11;
    public const int EscapeSequence = 19;
    public const int STRING = 8;

    // delegates
    // delegators



        public NCalcParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public NCalcParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return NCalcParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Grammar\\NCalc.g"; }
    }


    private const char BS = '\\';
    private static NumberFormatInfo numberFormatInfo = new NumberFormatInfo();

    private string extractString(string text) {
        
        StringBuilder sb = new StringBuilder(text);
        int startIndex = 1; // Skip initial quote
        int slashIndex = -1;

        while ((slashIndex = sb.ToString().IndexOf(BS, startIndex)) != -1)
        {
            char escapeType = sb[slashIndex + 1];
            switch (escapeType)
            {
                case 'u':
                  string hcode = String.Concat(sb[slashIndex+4], sb[slashIndex+5]);
                  string lcode = String.Concat(sb[slashIndex+2], sb[slashIndex+3]);
                  char unicodeChar = Encoding.Unicode.GetChars(new byte[] { System.Convert.ToByte(hcode, 16), System.Convert.ToByte(lcode, 16)} )[0];
                  sb.Remove(slashIndex, 6).Insert(slashIndex, unicodeChar); 
                  break;
                case 'n': sb.Remove(slashIndex, 2).Insert(slashIndex, '\n'); break;
                case 'r': sb.Remove(slashIndex, 2).Insert(slashIndex, '\r'); break;
                case 't': sb.Remove(slashIndex, 2).Insert(slashIndex, '\t'); break;
                case '\'': sb.Remove(slashIndex, 2).Insert(slashIndex, '\''); break;
    			case '"' : sb.Remove(slashIndex, 2).Insert(slashIndex, '"'); break;
                case '\\': sb.Remove(slashIndex, 2).Insert(slashIndex, '\\'); break;
                default: throw new RecognitionException("Unvalid escape sequence: \\" + escapeType);
            }

            startIndex = slashIndex + 1;

        }

        sb.Remove(0, 1);
        sb.Remove(sb.Length - 1, 1);

        return sb.ToString();
    }

    private static object parseUInt(string val, int fromBase) {
    	ulong v = Convert.ToUInt64(val, fromBase);

    	try {
    		return Convert.ToUInt32(v);
    	} catch(OverflowException) {
    		return v;
    	}
    }

    public List<string> Errors { get; private set; }

    public override void DisplayRecognitionError(String[] tokenNames, RecognitionException e) {
        
        base.DisplayRecognitionError(tokenNames, e);
        
        if(Errors == null)
        {
        	Errors = new List<string>();
        }
        
        String hdr = GetErrorHeader(e);
        String msg = GetErrorMessage(e, tokenNames);
        Errors.Add(msg + " at " + hdr);
    }


    public class ncalcExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "ncalcExpression"
    // Grammar\\NCalc.g:88:1: ncalcExpression returns [LogicalExpression value] : logicalExpression EOF ;
    public NCalcParser.ncalcExpression_return ncalcExpression() // throws RecognitionException [1]
    {   
        NCalcParser.ncalcExpression_return retval = new NCalcParser.ncalcExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken EOF2 = null;
        NCalcParser.logicalExpression_return logicalExpression1 = null;


        CommonTree EOF2_tree=null;

        try 
    	{
            // Grammar\\NCalc.g:89:2: ( logicalExpression EOF )
            // Grammar\\NCalc.g:89:4: logicalExpression EOF
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_logicalExpression_in_ncalcExpression56);
            	logicalExpression1 = logicalExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, logicalExpression1.Tree);
            	EOF2=(IToken)Match(input,EOF,FOLLOW_EOF_in_ncalcExpression58); 
            	retval.value =  ((logicalExpression1 != null) ? logicalExpression1.value : null); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "ncalcExpression"

    public class logicalExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "logicalExpression"
    // Grammar\\NCalc.g:92:1: logicalExpression returns [LogicalExpression value] : left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? ;
    public NCalcParser.logicalExpression_return logicalExpression() // throws RecognitionException [1]
    {   
        NCalcParser.logicalExpression_return retval = new NCalcParser.logicalExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal3 = null;
        IToken char_literal4 = null;
        NCalcParser.conditionalExpression_return left = null;

        NCalcParser.conditionalExpression_return middle = null;

        NCalcParser.conditionalExpression_return right = null;


        CommonTree char_literal3_tree=null;
        CommonTree char_literal4_tree=null;

        try 
    	{
            // Grammar\\NCalc.g:93:2: (left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? )
            // Grammar\\NCalc.g:93:4: left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_conditionalExpression_in_logicalExpression78);
            	left = conditionalExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, left.Tree);
            	 retval.value =  ((left != null) ? left.value : null); 
            	// Grammar\\NCalc.g:93:57: ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
            	int alt1 = 2;
            	int LA1_0 = input.LA(1);

            	if ( (LA1_0 == 23) )
            	{
            	    alt1 = 1;
            	}
            	switch (alt1) 
            	{
            	    case 1 :
            	        // Grammar\\NCalc.g:93:59: '?' middle= conditionalExpression ':' right= conditionalExpression
            	        {
            	        	char_literal3=(IToken)Match(input,23,FOLLOW_23_in_logicalExpression84); 
            	        		char_literal3_tree = (CommonTree)adaptor.Create(char_literal3);
            	        		adaptor.AddChild(root_0, char_literal3_tree);

            	        	PushFollow(FOLLOW_conditionalExpression_in_logicalExpression88);
            	        	middle = conditionalExpression();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, middle.Tree);
            	        	char_literal4=(IToken)Match(input,24,FOLLOW_24_in_logicalExpression90); 
            	        		char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
            	        		adaptor.AddChild(root_0, char_literal4_tree);

            	        	PushFollow(FOLLOW_conditionalExpression_in_logicalExpression94);
            	        	right = conditionalExpression();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, right.Tree);
            	        	 retval.value =  new TernaryExpression(((left != null) ? left.value : null), ((middle != null) ? middle.value : null), ((right != null) ? right.value : null)); 

            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "logicalExpression"

    public class conditionalExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "conditionalExpression"
    // Grammar\\NCalc.g:96:1: conditionalExpression returns [LogicalExpression value] : left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* ;
    public NCalcParser.conditionalExpression_return conditionalExpression() // throws RecognitionException [1]
    {   
        NCalcParser.conditionalExpression_return retval = new NCalcParser.conditionalExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken set5 = null;
        NCalcParser.booleanAndExpression_return left = null;

        NCalcParser.conditionalExpression_return right = null;


        CommonTree set5_tree=null;


        BinaryExpressionType type = BinaryExpressionType.Unknown;

        try 
    	{
            // Grammar\\NCalc.g:100:2: (left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )* )
            // Grammar\\NCalc.g:100:4: left= booleanAndExpression ( ( '||' | 'or' ) right= conditionalExpression )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_booleanAndExpression_in_conditionalExpression121);
            	left = booleanAndExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, left.Tree);
            	 retval.value =  ((left != null) ? left.value : null); 
            	// Grammar\\NCalc.g:100:56: ( ( '||' | 'or' ) right= conditionalExpression )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( ((LA2_0 >= 25 && LA2_0 <= 26)) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // Grammar\\NCalc.g:101:4: ( '||' | 'or' ) right= conditionalExpression
            			    {
            			    	set5 = (IToken)input.LT(1);
            			    	if ( (input.LA(1) >= 25 && input.LA(1) <= 26) ) 
            			    	{
            			    	    input.Consume();
            			    	    adaptor.AddChild(root_0, (CommonTree)adaptor.Create(set5));
            			    	    state.errorRecovery = false;
            			    	}
            			    	else 
            			    	{
            			    	    MismatchedSetException mse = new MismatchedSetException(null,input);
            			    	    throw mse;
            			    	}

            			    	 type = BinaryExpressionType.Or; 
            			    	PushFollow(FOLLOW_conditionalExpression_in_conditionalExpression146);
            			    	right = conditionalExpression();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, right.Tree);
            			    	 retval.value =  new BinaryExpression(type, retval.value, ((right != null) ? right.value : null)); 

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "conditionalExpression"

    public class booleanAndExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "booleanAndExpression"
    // Grammar\\NCalc.g:106:1: booleanAndExpression returns [LogicalExpression value] : left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* ;
    public NCalcParser.booleanAndExpression_return booleanAndExpression() // throws RecognitionException [1]
    {   
        NCalcParser.booleanAndExpression_return retval = new NCalcParser.booleanAndExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken set6 = null;
        NCalcParser.bitwiseOrExpression_return left = null;

        NCalcParser.bitwiseOrExpression_return right = null;


        CommonTree set6_tree=null;


        BinaryExpressionType type = BinaryExpressionType.Unknown;

        try 
    	{
            // Grammar\\NCalc.g:110:2: (left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )* )
            // Grammar\\NCalc.g:110:4: left= bitwiseOrExpression ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_bitwiseOrExpression_in_booleanAndExpression180);
            	left = bitwiseOrExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, left.Tree);
            	 retval.value =  ((left != null) ? left.value : null); 
            	// Grammar\\NCalc.g:110:55: ( ( '&&' | 'and' ) right= bitwiseOrExpression )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( ((LA3_0 >= 27 && LA3_0 <= 28)) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // Grammar\\NCalc.g:111:4: ( '&&' | 'and' ) right= bitwiseOrExpression
            			    {
            			    	set6 = (IToken)input.LT(1);
            			    	if ( (input.LA(1) >= 27 && input.LA(1) <= 28) ) 
            			    	{
            			    	    input.Consume();
            			    	    adaptor.AddChild(root_0, (CommonTree)adaptor.Create(set6));
            			    	    state.errorRecovery = false;
            			    	}
            			    	else 
            			    	{
            			    	    MismatchedSetException mse = new MismatchedSetException(null,input);
            			    	    throw mse;
            			    	}

            			    	 type = BinaryExpressionType.And; 
            			    	PushFollow(FOLLOW_bitwiseOrExpression_in_booleanAndExpression205);
            			    	right = bitwiseOrExpression();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, right.Tree);
            			    	 retval.value =  new BinaryExpression(type, retval.value, ((right != null) ? right.value : null)); 

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "booleanAndExpression"

    public class bitwiseOrExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "bitwiseOrExpression"
    // Grammar\\NCalc.g:116:1: bitwiseOrExpression returns [LogicalExpression value] : left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* ;
    public NCalcParser.bitwiseOrExpression_return bitwiseOrExpression() // throws RecognitionException [1]
    {   
        NCalcParser.bitwiseOrExpression_return retval = new NCalcParser.bitwiseOrExpression_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal7 = null;
        NCalcParser.bitwiseXOrExpression_return left = null;

        NCalcParser.bitwiseOrExpression_return right = null;


        CommonTree char_literal7_tree=null;


        BinaryExpressionType type = BinaryExpressionType.Unknown;

        try 
    	{
            // Grammar\\NCalc.g:120:2: (left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )* )
            // Grammar\\NCalc.g:120:4: left= bitwiseXOrExpression ( '|' right= bitwiseOrExpression )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_bitwiseXOrExpression_in_bitwiseOrExpression237);
            	left = bitwiseXOrExpression();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, left.Tree);
            	 retval.value =  ((left != null) ? left.value : null); 
            	// Grammar\\NCalc.g:120:56: ( '|' right= bitwiseOrExpression )*
            	do 
            	{
            	    int alt4 = 2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0 == 29) )
            	    {
            	        alt4 = 1;
            	    }


            	    switch (alt4) 
            		{
            			case 1 :
            			    // Grammar\\NCalc.g:121:4: '|' right= bitwiseOrExpression
            			    {
            			    	char_literal7=(IToken)Match(input,29,FOLLOW_29_in_bitwiseOrExpression246); 
            			    		char_literal7_tree = (CommonTree)adaptor.Create(char_literal7);
            			    		adaptor.AddChild(root_0, char_literal7_tree);

            			    	 type = BinaryExpressionType.BitwiseOr; 
            			    	PushFollow(FOLLOW_bitwiseOrExpression_in_bitwiseOrExpression256);
            			    	right = bitwiseOrExpression();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, right.Tree);
            			    	 retval.value =  new BinaryExpression(type, retval.value, ((right != null) ? right.value : null)); 

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "bitwiseOrExpression"

    public class bitwiseXOrExpression_return : ParserRuleReturnScope
    {
        public LogicalExpression value;
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };
